examples-generated/namespaced/bedrockagentcore/v1beta1/gateway.yaml
# SPDX-FileCopyrightText: 2025 The Crossplane Authors <https://crossplane.io>
#
# SPDX-License-Identifier: CC0-1.0


apiVersion: bedrockagentcore.aws.m.upbound.io/v1beta1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: bedrockagentcore/v1beta1/gateway
  labels:
    testing.upbound.io/example-name: example
  name: example
  namespace: upbound-system
spec:
  forProvider:
    authorizerConfiguration:
      customJwtAuthorizer:
        allowedAudience:
        - test1
        - test2
        discoveryUrl: https://accounts.google.com/.well-known/openid-configuration
    authorizerType: CUSTOM_JWT
    name: example-gateway
    protocolType: MCP
    region: us-west-1
    roleArnSelector:
      matchLabels:
        testing.upbound.io/example-name: example
